--- a/src/Modules/Tutorial/item-component/item.scss
+++ b/src/Modules/Tutorial/item-component/item.scss
@@ -1,10 +1,12 @@
 $colorTitle: #6d0101;
-
+.visible {
+  margin-top: -100px;
+}
 .item{
-  overflow: hidden;
+  position: relative;
   &__title{
     color: $colorTitle;
-    font-size: 20px;
+    font-size: 26px;
     font-weight: 500;
     margin-bottom: 10px;
   }
@@ -33,5 +35,6 @@ $colorTitle: #6d0101;
     transition: all 0.6s ease;
     position: relative;
     z-index: 0;
+    // position: absolute;
   }
 }
